--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@types/node-cron": "^3.0.11"
   }
 }
