--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mysql2": "^3.11.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
+    "stripe": "^17.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
